In the anchor tag for user session timer in headerandnavbar.php, href=# is given. Also the header class flex wrap is set to nowrap in style.css. And in script.js, the code has been corrected for current or active link in navbar.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .header {
   display: -webkit-flex;
   display:flex;
-  flex-wrap:no-wrap;
+  flex-wrap:nowrap;
   justify-content:space-around;
   background-color:#7f8c8d;
   padding:1rem;
